--- a/index.html
+++ b/index.html
@@ -8,4 +8,15 @@
 </head>
 <body>
   <h1>Visualizing RDF using D3</h1>
+  <script>
+  	var rdf = [
+  			{"subject":"ex:ThaiLand", "predicate":"ex:hasFood", "object":"ex:TomYumKung"},
+  			{"subject":"ex:TomYumKung", "predicate":"rdf:type", "object":"ex:SpicyFood"},
+  			{"subject":"ex:TomYumKung", "predicate":"ex:includes", "object":"ex:shrimp"},
+  			{"subject":"ex:TomYumKung", "predicate":"ex:includes", "object":"ex:chilly"},
+  			{"subject":"ex:TomYumKung", "predicate":"ex:includes", "object":"ex:lemon"},
+  			{"subject":"ex:lemon", "predicate":"ex:hasTaste", "object":"ex:sour"},
+  			{"subject":"ex:chilly", "predicate":"ex:hasTaste", "object":"ex:spicy"}
+  		];
+  </script>
 </body>
