--- a/index.html
+++ b/index.html
@@ -203,4 +203,10 @@
 	
   </script>
   
+
+  <footer style="margin-top:40px; padding:20px; height:50px; border-top:1px solid #eee; background:#fafafa; text-align:center">
+	By: <strong>Rathachai Chawuthai</strong>
+	<br/>
+	<a target="_blank" href="https://github.com/Rathachai">GitHub</a> | <a target="_blank" href="https://www.linkedin.com/in/rathachai">LinkedIn</a>
+  </footer>
 </body>
