--- a/multilinks.html
+++ b/multilinks.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Visualizing RDF using D3</title>
+	<title>D3RDF : Multi</title>
 	<meta name="author" content="Rathachai CHAWUTHAI">
 	
 	<style type="text/css">
@@ -198,7 +198,7 @@
 	</script>
 </head>
 <body style="margin:20px;">
-  <h1>Visualizing RDF using D3</h1>
+  <h1>Visualizing RDF using D3 : Multiple Links between a Node Pair</h1>
   <div id="svg-body" class="panel-body"></div>
   <script>
   	var triples = [
@@ -227,4 +227,11 @@
 	
   </script>
   
+  
+  
+  <footer style="margin-top:40px; padding:20px; height:50px; border-top:1px solid #eee; background:#fafafa; text-align:center">
+	By: <strong>Rathachai Chawuthai</strong>
+	<br/>
+	<a target="_blank" href="https://github.com/Rathachai">GitHub</a> | <a target="_blank" href="https://www.linkedin.com/in/rathachai">LinkedIn</a>
+  </footer>
 </body>
