--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</style>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="http://d3js.org/d3.v3.min.js"></script>
+	<script src="https://d3js.org/d3.v3.min.js"></script>
 	<script>
 		function filterNodesById(nodes,id){
 			return nodes.filter(function(n) { return n.id === id; });
